--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,62 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
-}
-
 group 'com.ubertob'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
+apply plugin: "idea"
+apply plugin: "kotlin"
+
+
+ext {
+    jvmVersion = "1.8"
+    junitVersion = '5.1.1'
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+buildscript {
+
+    ext.kotlinVersion = "1.3.21"
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    }
+}
+
+wrapper {
+    gradleVersion = "5.2.0"
+}
+
+
+
+sourceCompatibility = "${jvmVersion}"
+targetCompatibility = "${jvmVersion}"
+
+repositories {
+    jcenter()
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "${jvmVersion}"
+    }
 }
+
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "${jvmVersion}"
+    }
 }
+
+
+dependencies{
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile       "org.opentest4j:opentest4j:1.1.1"
+
+
+    testCompile   'com.willowtreeapps.assertk:assertk-jvm:0.13'
+    testCompile   "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testCompile   "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+    testCompile   "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
+
+}
+
+
